--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+altair==5.5.0
+numpy==2.2.5
 pandas==2.2.3
+plotly==6.0.0
 PyJWT==2.10.1
 Requests==2.32.3
+seaborn==0.13.2
 SQLAlchemy==2.0.38
-streamlit==1.42.0
+streamlit==1.44.1
 mysqlclient
