--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 altair==5.5.0
-numpy==2.2.6
-pandas==2.2.3
+numpy==2.3.2
+pandas==2.3.2
 plotly==6.0.0
 PyJWT==2.10.1
-Requests==2.32.3
+pytz==2025.2
+Requests==2.32.5
 seaborn==0.13.2
 SQLAlchemy==2.0.38
-streamlit==1.45.1
+streamlit==1.48.1
 mysqlclient
 XlsxWriter
