--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,19 @@ tosql.ipynb
 databasedata
 default-secret-key.env
 book_info.py
+
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
+node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
