deploy file changed

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,57 +6,59 @@ on:
       - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Pull the code
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      # 2️⃣ Set up Node.js 24 LTS for React build
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 24
+          cache: 'npm'
+          cache-dependency-path: ict/package-lock.json
+
+      # 3️⃣ Build React app
+      - name: Build React app
+        working-directory: ict
+        run: |
+          npm ci
+          npm run build
+
+      # 4️⃣ Set up SSH
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Deploy to VPS
+      # 5️⃣ Copy build folder to VPS
+      - name: Upload React build to VPS
+        run: |
+          echo "🚀 Uploading build files to VPS..."
+          rsync -avz --delete ict/build/ rishabhvyas@178.16.137.226:/home/rishabhvyas/bookledger/ict/build/
+
+      # 6️⃣ Deploy backend (Flask/Streamlit)
+      - name: Deploy backend on VPS
         run: |
           ssh -o StrictHostKeyChecking=no rishabhvyas@178.16.137.226 << 'EOF'
           set -e
           cd /home/rishabhvyas/bookledger
 
-          echo "🔄 Updating code from Git..."
+          echo "🔄 Updating backend code..."
           git fetch origin main
           git reset --hard origin/main
           git clean -fd
 
-          echo "📦 Setting up Node.js 18 using nvm..."
-          export NVM_DIR="$HOME/.nvm"
-          if [ ! -d "$NVM_DIR" ]; then
-            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/master/install.sh | bash
-          fi
-          source "$NVM_DIR/nvm.sh"
-          nvm install 18
-          nvm use 18
-          nvm alias default 18
-
-          echo "🧰 Node version: $(node -v)"
-          echo "🧰 NPM version: $(npm -v)"
-
-          echo "⚙️ Installing React dependencies and building..."
-          cd ict
-          rm -rf node_modules package-lock.json build
-          npm install
-          npm run build
-          cd ..
-
-          echo "🐍 Activating Python virtual environment..."
+          echo "🐍 Activating Python environment..."
           source /home/rishabhvyas/bookledger/venv/bin/activate
-
-          echo "📦 Installing Python dependencies..."
           pip install -r requirements.txt
 
-          echo "🚀 Restarting Streamlit service..."
+          echo "🔁 Restarting Streamlit service..."
           sudo systemctl restart newcrm.service
 
-          echo "✅ Deployment complete!"
+          echo "✅ Backend updated and service restarted!"
           EOF
